--- a/example/ExpressJs/package.json
+++ b/example/ExpressJs/package.json
@@ -2,9 +2,11 @@
   "name": "example",
   "version": "1.0.0",
   "description": "",
-  "main": "backend.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start":"npm run build && npm run server",
+    "server":"nodemon ./backend.js localhost 3000"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,8 @@
     "api-ape": "^0.0.0",
     "express": "^4.18.2",
     "hyper-element": "^0.11.1",
-    "scribbles": "^1.5.0"
+    "scribbles": "^1.5.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
