--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Remote procedure events",
   "main": "index.js",
-  "scripts": {   
+  "scripts": {
     "test": "jest --no-cache ",
     "test:go": "npm test -- --watch --coverage",
     "test:update": "npm test -- --updateSnapshot",
@@ -26,6 +26,9 @@
   },
   "homepage": "https://github.com/codemeasandwich/api-ape#readme",
   "dependencies": {
-    "jest": "^29.3.1"
+    "express-ws": "^5.0.2",
+    "jest": "^29.3.1",
+    "ua-parser-js": "^1.0.37",
+    "ws": "^8.14.0"
   }
 }
