chore: update project license to MIT

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "ape"
   ],
   "author": "brian shannon",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/codemeasandwich/api-ape/issues"
   },
